# TodoApp-CLI

./: Cargo.toml  README.md  task-todo.json  test-journal.json
src/: cli.rs  main.rs  tasks.rs
