[package]
name = "todolist-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
home = "0.5.9"
structopt = "0.3.26"
serde_json = "1.0.113"

[dependencies.chrono]
features = ["serde"]
version = "0.4.34"

[dependencies.serde]
features = ["derive"]
version = "1.0.113"
